--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite --port 4173",
     "start": "vite --port 3000",
     "build": "vite build && tsc",
-    "serve": "vite preview",
+    "serve": "json-server --watch db.json",
     "test": "vitest run"
   },
   "dependencies": {
@@ -14,8 +14,10 @@
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
